<resources>
    <string name="app_name">TIME TO PLAN</string>
    <string name="txt_mi_add" />
    <string name="txt_mi_search" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_time_to_plan">Logo Time to plan</string>
    <string name="txt_calendar_icon">Calendar icon</string>
    <string name="txt_list_icon">list icon</string>
    <string name="txt_home">Home</string>
    <string name="txt_settings">settings</string>
    <string name="txt_bt_details">details</string>
    <string name="no_note">Geen todo</string>
    <string name="startDate">Start date</string>
    <string name="txt_moreInfo">More info</string>
    <string name="txt_title">Title</string>
    <string name="txt_description">Description</string>
    <string name="txt_createdBy">Assignd to</string>
    <string name="txt_startDate">Start date</string>
    <string name="txt_endDate">End date</string>
    <string name="txt_saveItem">Save</string>
</resources>