<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/txt_mi_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_home"
        android:checkable="false"
        android:checked="false"
        android:enabled="false"
        android:icon="@mipmap/ic_launcher_icon_foreground"
        android:menuCategory="container"
        android:title="@string/txt_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_settings"
        android:menuCategory="container"
        android:title="@string/txt_settings" />
</menu>